--- a/src/odom_logger/package.xml
+++ b/src/odom_logger/package.xml
@@ -1,25 +1,20 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>car_description</name>
+  <name>odom_logger</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="ezo@todo.todo">ezo</maintainer>
-  <license>Apache-2.0</license>
+  <maintainer email="zoltaneke@icloud.com">ezo</maintainer>
+  <license>TODO: License declaration</license>
 
-  <depend>urdf</depend>
   <depend>rclpy</depend>
-  <depend>std_msgs</depend>
-  <depend>geometry_msgs</depend>
-  <depend>sensor_msgs</depend>
-  <depend>tf2_ros</depend>
-  <depend>robot_state_publisher</depend>
-  <depend>joint_state_publisher_gui</depend>
-  <depend>teleop_twist_keyboard</depend>
-  <depend>controller_manager</depend>
-  <depend>ackermann_steering_controller</depend>
+  <depend>nav_msgs</depend>
 
-  
+  <exec_depend>rosbag2_storage</exec_depend>
+  <exec_depend>ros2bag</exec_depend>
+  <exec_depend>launch</exec_depend>
+  <exec_depend>launch_ros</exec_depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
