Initialize data_logger package with essential configuration files
- Created package.xml to define package metadata and dependencies.
- Added resource file for package resource index.
- Set up configuration in setup.cfg for script installation.
- Implemented setup.py for package installation and entry points for console scripts.
- Added test files for copyright, flake8, and PEP 257 compliance checks.

--- a/src/data_logger/package.xml
+++ b/src/data_logger/package.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>odom_logger</name>
+  <name>data_logger</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="zoltaneke@icloud.com">ezo</maintainer>
   <license>TODO: License declaration</license>
 
-  <depend>rclpy</depend>
-  <depend>nav_msgs</depend>
 
-  <exec_depend>rosbag2_storage</exec_depend>
-  <exec_depend>ros2bag</exec_depend>
-  <exec_depend>launch</exec_depend>
-  <exec_depend>launch_ros</exec_depend>
+  <depend>rclpy</depend>
+  <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>launch</depend>
+  <depend>launch_ros</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
