--- a/src/data_logger/package.xml
+++ b/src/data_logger/package.xml
@@ -15,6 +15,7 @@
   <depend>nav_msgs</depend>
   <depend>launch</depend>
   <depend>launch_ros</depend>
+  <depend>ackermann_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
