Add offline validation and analysis scripts for trajectory comparison and parameter optimization
- Implemented `analize_tf.py` for analyzing and plotting real vs simulated TF trajectories, including RMSE calculation.
- Developed `analyze.py` for trajectory analysis of drive and odometry data, with synchronization and RMSE computation.
- Created `best_l_tot_lf.yaml` for storing optimal LF/LR ratio parameters.
- Added `filter_drive.py` to filter drive data and generate simulated drive CSV files.
- Introduced `grid_search_BC.py` for grid search optimization of B and C parameters in vehicle dynamics.
- Implemented `grid_search_lf_lr.py` for optimizing wheelbase and LF/LR ratio using a master params.yaml.
- Developed `grid_search_tire.py` for optimizing tire parameters C_lin and D.
- Created `offline_validation.py` for offline validation of simulated trajectories against real data, including error analysis and plotting.

--- a/src/car_simulation/CMakeLists.txt
+++ b/src/car_simulation/CMakeLists.txt
@@ -19,13 +19,17 @@ find_package(ackermann_steering_controller REQUIRED)
 find_package(hardware_interface REQUIRED)
 find_package(xacro REQUIRED)
 find_package(ackermann_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2_msgs REQUIRED)
 
 # --- Launch/config/urdf mappák telepítése
 install(DIRECTORY
   launch
   config
   urdf
-  bags
   DESTINATION share/${PROJECT_NAME}
 )
 
