--- a/src/car_simulation/package.xml
+++ b/src/car_simulation/package.xml
@@ -24,6 +24,10 @@
   <depend>launch_ros</depend>
   <depend>rviz2</depend>
   <depend>ackermann_msgs</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
   
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
