--- a/src/data_logger/package.xml
+++ b/src/data_logger/package.xml
@@ -16,6 +16,8 @@
   <depend>launch</depend>
   <depend>launch_ros</depend>
   <depend>ackermann_msgs</depend>
+  <depend>tf2_msgs</depend>
+  <depend>tf2_ros</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
