Add vehicle model and leader position publisher scripts; update launch and parameter files

--- a/src/car_simulation/CMakeLists.txt
+++ b/src/car_simulation/CMakeLists.txt
@@ -37,6 +37,10 @@ install(DIRECTORY
 install(PROGRAMS
     scripts/ackermann_to_odom.py
     scripts/drive_replay.py
+    scripts/vehicle_model_node.py
+    scripts/leader_position_publisher.py
+    scripts/spawn_f1tenth_vehicle.py
+    scripts/spawn_f1tenth_vehicle_debug.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
