--- a/src/car_simulation/package.xml
+++ b/src/car_simulation/package.xml
@@ -28,6 +28,7 @@
   <depend>tf2_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
+  <depend>carla</depend>
   
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
