--- a/src/car_simulation/package.xml
+++ b/src/car_simulation/package.xml
@@ -3,12 +3,9 @@
 <package format="3">
   <name>car_simulation</name>
   <version>0.0.0</version>
-  <description>Csomag a szimulált kisautó vezérlésére és futtatására</description>
+  <description>TODO: Package description</description>
   <maintainer email="zoltaneke@icloud.com">ezo</maintainer>
-  <license>Apache-2.0</license>
-
-  <!-- Build tool -->
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <license>TODO: License declaration</license>
 
   <!-- Függőségek build és futás közben -->
   <depend>rclcpp</depend>
@@ -29,11 +26,13 @@
   <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>carla</depend>
-  
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
